<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_risk_warning_title"
            style="@style/text_0e1214_20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dialog_risk_warning_title" />

        <TextView
            android:id="@+id/tv_risk_warning_text"
            style="@style/text_333_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="9dp"
            android:text="@string/dialog_risk_warning_text" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginRight="64dp"
            android:layout_marginTop="18dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_risk_warning_name"
                style="@style/text_333_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_risk_warning_name" />

            <TextView
                android:id="@+id/tv_risk_warning_date"
                style="@style/text_333_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_risk_warning_date" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_close_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:src="@drawable/icon_clean"
        />
</FrameLayout>