<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="17dp"
        android:paddingLeft="38dp"
        android:paddingRight="48dp"
        android:paddingTop="17dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="我的级别" />

          <TextView
              android:id="@+id/tv_my_rank"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:layout_weight="3"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="代理类型" />

        <Spinner
            android:id="@+id/sp_agency_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="服务类型" />

            <Spinner
                android:id="@+id/sp_service_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="选择地区" />
        <TextView
            android:id="@+id/tv_agency_address"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_weight="3"
            android:background="@drawable/selector_button_bg"
            android:drawableRight="@drawable/icon_order_in"
            android:hint="@string/spinner_tip"
            android:maxEms="13"
            android:gravity="center"
            style="@style/text_0e1214_15"
            />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="服务人员" />

            <cn.cnlinfo.ccf.view.CleanEditText
                android:id="@+id/et_service_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_style"
                android:digits="@string/input_impose_num_lower_upper_case"
                android:gravity="center"
                android:inputType="text"
                android:hint="服务人员账号"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="@drawable/selector_edit_text_color" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="安全密码" />

            <cn.cnlinfo.ccf.view.CleanEditText
                android:id="@+id/et_safe_pass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@drawable/edit_text_style"
                android:digits="@string/input_impose_num"
                android:gravity="center"
                android:inputType="textPassword"
                android:maxLength="11"
                android:maxLines="1"
                android:textColor="@drawable/selector_edit_text_color" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="9dp">
            <CheckBox
                android:id="@+id/cb_is_read"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:checked="true"/>
            <TextView
                android:id="@+id/tv_upgrade_agency_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <Button
            android:id="@+id/btn_upgrade_agency"
            android:layout_width="72dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:background="@drawable/selector_button_bg"
            android:text="确定" />
    </LinearLayout>
</LinearLayout>
</ScrollView>